# neurosap

./: README.md  encoding.py  images.py  main.py  neurosap.pyd  run.py
libs/neural-network/src/: layer.rs  network.rs  neuron.rs
libs/neurosap/: Cargo.toml
libs/neurosap-py/: Cargo.toml
libs/neurosap-py/src/: lib.rs
libs/neurosap/src/: agent.rs  agent_individual.rs  brain.rs  lib.rs
neurosap/: actions.py  encoding.py  helpers.py  images.py  index.py  neurosap.pyd  sap.py
